--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -8,7 +8,44 @@
     <link rel="stylesheet" href="/styles/about-us.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="hamburger-menu">
+      <div class="logo">
+        <a href="#landing-page">
+          <img src="/assets/BrainIgnite-logo.png" alt="Brain Ignite Logo" />
+        </a>
+      </div>
+      <div class="menu-icon" onclick="toggleMenu()">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+      </div>
+      <div class="menu-items">
+        <div class="menu-icon" onclick="toggleMenu()">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
+        <a href="about-us.html">About</a>
+        <a href="../index.html#products-page">Products</a>
+        <a href="#contact">Contact</a>
+      </div>
+    </div>
+    <div class="nav-bar">
+      <a href="index.html">
+        <img
+          src="/assets/BrainIgnite-logo.png"
+          height="90"
+          width="80"
+          alt="Brain Ignite Logo"
+        />
+      </a>
+      <div class="topnav">
+        <a href="about-us.html">About Us</a>
+        <a href="#products">Products</a>
+        <a href="#contact">Contact</a>
+      </div>
+    </div>
+    <div class="story-container">
       <div class="our-story">
         <h1>Our story</h1>
         <p>
@@ -23,6 +60,15 @@
           simple and delicious with Brain Ignite
         </p>
       </div>
+      <div class="logo-section">
+        <img
+          src="/assets/BrainIgnite-logo.png"
+          height="90"
+          width="80"
+          alt="Brain Ignite Logo"
+        />
+      </div>
     </div>
+    <div class="second-container"></div>
   </body>
 </html>
