--- a/pages/cola.html
+++ b/pages/cola.html
@@ -8,6 +8,28 @@
     <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
+    <div class="hamburger-menu">
+      <div class="logo">
+        <a href="#landing-page">
+          <img src="/assets/BrainIgnite-logo.png" alt="Brain Ignite Logo" />
+        </a>
+      </div>
+      <div class="menu-icon" onclick="toggleMenu()">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+      </div>
+      <div class="menu-items">
+        <div class="menu-icon" onclick="toggleMenu()">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
+        <a href="about-us.html">About</a>
+        <a href="../index.html#products-page">Products</a>
+        <a href="#contact">Contact</a>
+      </div>
+    </div>
     <div class="nav-bar">
       <a href="index.html">
         <img
@@ -18,8 +40,8 @@
         />
       </a>
       <div class="topnav">
-        <a href="#news">About Us</a>
-        <a href="index.html#products-page">Products</a>
+        <a href="about-us.html">About Us</a>
+        <a href="../index.html#products-page">Products</a>
         <a href="#contact">Contact</a>
       </div>
     </div>
