--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
     <script src="/scripts/script.js" defer></script>
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://aloziee0203.github.io/Brain-Ignite/styles/style.css"
+    />
   </head>
   <body>
     <div class="hamburger-menu">
