--- a/pages/cola.html
+++ b/pages/cola.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="/styles/overview.css" />
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://aloziee0203.github.io/Brain-Ignite/styles/style.css"
+    />
   </head>
   <body>
     <div class="hamburger-menu">
