--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="hamburger-menu">
       <div class="logo">
         <a href="#landing-page">
-          <img src="/assets/BrainIgnite-logo.png" alt="Brain Ignite Logo" />
+          <img src="assets/BrainIgnite-logo.png" alt="Brain Ignite Logo" />
         </a>
       </div>
       <div class="menu-icon" onclick="toggleMenu()">
@@ -41,7 +41,7 @@
       <div class="nav-bar">
         <a href="#landing-page">
           <img
-            src="/assets/BrainIgnite-logo.png"
+            src="assets/BrainIgnite-logo.png"
             height="90"
             width="80"
             alt="Brain Ignite Logo"
@@ -60,7 +60,7 @@
           <button class="check-products-btn">Check out our drinks</button>
         </div>
         <div class="lemon">
-          <img src="/assets/cold-lemon.png" alt="lemon flavour" />
+          <img src="assets/cold-lemon.png" alt="lemon flavour" />
         </div>
       </div>
       <div id="products-page" class="products-page">
@@ -68,25 +68,25 @@
         <div class="products">
           <div class="soda-1">
             <a href="/pages/lemon.html">
-              <img src="/assets/lemon.png" alt="Soda Can 1" />
+              <img src="assets/lemon.png" alt="Soda Can 1" />
               <p>Lemon</p>
             </a>
           </div>
           <div class="soda-2">
             <a href="/pages/cherry.html">
-              <img src="/assets/cherry.png" alt="Soda Can 2" />
+              <img src="assets/cherry.png" alt="Soda Can 2" />
               <p>Cherry</p>
             </a>
           </div>
           <div class="soda-3">
             <a href="/pages/cola.html">
-              <img src="/assets/cola.png" alt="Soda Can 3" />
+              <img src="assets/cola.png" alt="Soda Can 3" />
               <p>Cola</p>
             </a>
           </div>
           <div class="soda-4">
             <a href="/pages/orange.html">
-              <img src="/assets/orange.png" alt="Soda Can 4" />
+              <img src="assets/orange.png" alt="Soda Can 4" />
               <p>Orange</p>
             </a>
           </div>
