--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="nav-bar">
-      <a href="index.html">
+      <a href="/index.html">
         <img
           src="/assets/BrainIgnite-logo.png"
           height="90"
@@ -44,7 +44,7 @@
       </a>
       <div class="topnav">
         <a href="about-us.html">About Us</a>
-        <a href="#products">Products</a>
+        <a href="/index.html#products-page">Products</a>
         <a href="#contact">Contact</a>
       </div>
     </div>
