--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           />
         </a>
         <div class="topnav">
-          <a href="about-us.html">About Us</a>
-          <a href="#products">Products</a>
+          <a href="/pages/about-us.html">About Us</a>
+          <a href="#products-page">Products</a>
           <a href="#contact">Contact</a>
         </div>
       </div>
