--- a/pages/orange.html
+++ b/pages/orange.html
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="nav-bar">
-      <a href="index.html">
+      <a href="/index.html">
         <img
           src="/assets/BrainIgnite-logo.png"
           height="90"
