--- a/index.html
+++ b/index.html
@@ -67,25 +67,25 @@
         <h1>Our Products</h1>
         <div class="products">
           <div class="soda-1">
-            <a href="/pages/lemon.html">
+            <a href="pages/lemon.html">
               <img src="assets/lemon.png" alt="Soda Can 1" />
               <p>Lemon</p>
             </a>
           </div>
           <div class="soda-2">
-            <a href="/pages/cherry.html">
+            <a href="pages/cherry.html">
               <img src="assets/cherry.png" alt="Soda Can 2" />
               <p>Cherry</p>
             </a>
           </div>
           <div class="soda-3">
-            <a href="/pages/cola.html">
+            <a href="pages/cola.html">
               <img src="assets/cola.png" alt="Soda Can 3" />
               <p>Cola</p>
             </a>
           </div>
           <div class="soda-4">
-            <a href="/pages/orange.html">
+            <a href="pages/orange.html">
               <img src="assets/orange.png" alt="Soda Can 4" />
               <p>Orange</p>
             </a>
