--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="hamburger-menu">
       <div class="logo">
         <a href="#landing-page">
-          <img src="assets/BrainIgnite-logo.png" alt="Brain Ignite Logo" />
+          <img src="/assets/BrainIgnite-logo.png" alt="Brain Ignite Logo" />
         </a>
       </div>
       <div class="menu-icon" onclick="toggleMenu()">
